2FA Code generator and Biometric login support

--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@octokit/rest": "^22.0.0",
     "@passport-js/passport-twitter": "^1.0.10",
     "@popperjs/core": "^2.11.8",
+    "@simplewebauthn/browser": "^13.2.2",
+    "@simplewebauthn/server": "^13.2.2",
     "bootstrap": "^5.3.8",
     "bootstrap-social": "github:SeattleDevs/bootstrap-social",
     "bowser": "^2.12.1",
@@ -76,7 +78,9 @@
     "passport-steam-openid": "^1.1.7",
     "pdfjs-dist": "^5.4.296",
     "pug": "^3.0.3",
+    "qrcode": "^1.5.4",
     "sass": "^1.93.2",
+    "speakeasy": "^2.0.0",
     "stripe": "^19.1.0",
     "twilio": "^5.10.2",
     "twitch-passport": "^1.0.6",
